fix: sticky header overlaps in-page anchors

--- a/css/tailwind.css
+++ b/css/tailwind.css
@@ -2,6 +2,10 @@
 @tailwind components;
 @tailwind utilities;
 
+html {
+  scroll-padding-top: 5rem; /* height of sticky header */
+}
+
 /* hamburger menu button: https://css-tricks.com/line-animated-hamburger-menu/ */
 .line {
   fill: none;
